--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.28",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -26,7 +27,8 @@
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^15.1.3"
   },
   "private": true
 }
