--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
@@ -17,6 +18,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.28",
     "expo-status-bar": "~2.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
