--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "expo": "~52.0.28",
     "expo-status-bar": "~2.0.1",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-background-fetch": "^4.2.7",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
