--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
+    "react-native-share": "^12.0.3",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0"
   },
