--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
-    "expo-image-picker": "~16.0.5"
+    "expo-image-picker": "~16.0.5",
+    "expo-notifications": "~0.29.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
