--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "expo": "~52.0.28",
+    "expo-haptics": "^14.0.1",
+    "expo-image-picker": "~16.0.5",
+    "expo-notifications": "~0.29.13",
     "expo-status-bar": "~2.0.1",
     "lodash": "^4.17.21",
     "lottie-react-native": "^7.1.0",
@@ -31,9 +34,7 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-image-picker": "~16.0.5",
-    "expo-notifications": "~0.29.13"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
