--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
