feat: add eas.json for build configuration and update app.json with package and projectId

--- a/app.json
+++ b/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#121212"
-      }
+      },
+      "package": "in.ankurhalder.lumora"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "75d10121-94a8-4199-a6c3-3910a096756d"
+      }
     }
   }
 }
