--- a/package.json
+++ b/package.json
@@ -13,20 +13,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@xmldom/xmldom": "^0.8.10",
     "axios": "^1.7.9",
     "expo": "~52.0.28",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.0.5",
     "expo-notifications": "~0.29.13",
     "expo-status-bar": "~2.0.1",
+    "glob": "^9.3.5",
     "lodash": "^4.17.21",
     "lottie-react-native": "^7.1.0",
+    "lru-cache": "^11.0.2",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
@@ -39,7 +44,8 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "rimraf": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
