--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "expo-status-bar": "~2.0.1",
     "glob": "^9.3.5",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^7.1.0",
+    "lottie-react-native": "7.1.0",
     "lru-cache": "^11.0.2",
     "moment": "^2.30.1",
     "react": "18.3.1",
@@ -41,7 +41,7 @@
     "react-native-paper": "^5.13.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
