--- a/package.json
+++ b/package.json
@@ -51,5 +51,13 @@
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^15.1.3"
   },
+"expo": {
+  "doctor": {
+    "reactNativeDirectoryCheck": {
+      "listUnknownPackages": false
+    }
+  }
+},
+
   "private": true
 }
