feat: add bundleIdentifier and infoPlist for iOS configuration in app.json

--- a/app.json
+++ b/app.json
@@ -14,7 +14,11 @@
     },
     "ios": {
       "supportsTablet": true,
-      "buildNumber": "1"
+      "buildNumber": "1",
+      "bundleIdentifier": "in.ankurhalder.lumora",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "versionCode": 1,
