feat: add preview build configuration for internal distribution in eas.json

--- a/eas.json
+++ b/eas.json
@@ -5,6 +5,12 @@
   "build": {
     "production": {
       "autoIncrement": true
+    },
+    "preview": {
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     }
   }
 }
