--- a/eas.json
+++ b/eas.json
@@ -1,16 +1,21 @@
 {
-  "cli": {
-    "appVersionSource": "remote"
-  },
   "build": {
-    "production": {
-      "autoIncrement": true
-    },
     "preview": {
-      "distribution": "internal",
       "android": {
         "buildType": "apk"
       }
-    }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
+      "distribution": "internal"
+    },
+    "production": {}
   }
 }
