--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
       "buildNumber": "1",
       "bundleIdentifier": "in.ankurhalder.lumora",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "UIBackgroundModes": ["fetch", "processing"],
+        "BGTaskSchedulerPermittedIdentifiers": ["com.transistorsoft.fetch"]
       }
     },
     "android": {
@@ -35,6 +37,7 @@
       "eas": {
         "projectId": "75d10121-94a8-4199-a6c3-3910a096756d"
       }
-    }
+    },
+    "plugins": ["expo-build-properties", "expo-background-fetch"]
   }
 }
