--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
-    "rimraf": "^4.4.1"
+    "rimraf": "^4.4.1",
+    "expo-build-properties": "~0.13.2",
+    "expo-background-fetch": "~13.0.5",
+    "expo-task-manager": "~12.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
