--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,6 @@ buildscript {
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: '35')
         targetSdkVersion = Integer.parseInt(findProperty('android.targetSdkVersion') ?: '34')
         kotlinVersion = findProperty('android.kotlinVersion') ?: '1.9.24'
-
         ndkVersion = "26.1.10909125"
     }
     repositories {
@@ -27,15 +26,25 @@ allprojects {
     repositories {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url(new File(['node', '--print', "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), '../android'))
+            url(new File(['node', '--print', "require.resolve('react-native/package.json')"]
+                .execute(null, rootDir).text.trim(), '../android'))
         }
         maven {
             // Android JSC is installed from npm
-            url(new File(['node', '--print', "require.resolve('jsc-android/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim(), '../dist'))
+            url(new File(['node', '--print', "require.resolve('jsc-android/package.json', { paths: [require.resolve('react-native/package.json')] })"]
+                .execute(null, rootDir).text.trim(), '../dist'))
         }
-
+        maven {
+            // Use the local libs directory for react-native-background-fetch
+            url("${project(':react-native-background-fetch').projectDir}/libs")
+        }
         google()
         mavenCentral()
         maven { url 'https://www.jitpack.io' }
+    }
+    
+    // Exclude the legacy support-compat dependency (which causes duplicate classes)
+    configurations.all {
+        exclude group: "com.android.support", module: "support-compat"
     }
 }
