--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@xmldom/xmldom": "^0.8.10",
     "axios": "^1.7.9",
     "expo": "^52.0.28",
+    "expo-build-properties": "~0.13.2",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.0.5",
     "expo-notifications": "~0.29.13",
@@ -45,10 +46,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
-    "rimraf": "^4.4.1",
-    "expo-build-properties": "~0.13.2",
-    "expo-background-fetch": "~13.0.5",
-    "expo-task-manager": "~12.0.5"
+    "rimraf": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
