--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-background-fetch": "^4.2.7",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.16.7",
